--- a/Writerside/writerside.cfg
+++ b/Writerside/writerside.cfg
@@ -3,8 +3,8 @@
 
 <ihp version="2.0">
     <topics dir="topics" web-path="topics"/>
-    <images dir="images" web-path="kimjunghak.github.io"/>
+    <images dir="images" web-path="images"/>
     <categories src="c.list"/>
     <vars src="v.list"/>
-    <instance src="hi.tree"/>
+    <instance src="resume.tree"/>
 </ihp>
