--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,14 +15,14 @@ permissions:
 
 env:
   # Name of module and id separated by a slash
-  INSTANCE: Writerside/resume
+  INSTANCE: Writerside/blog
   # Replace HI with the ID of the instance in capital letters
-  ARTIFACT: webHelpRESUME2-all.zip
+  ARTIFACT: webHelpBLOG2-all.zip
   # Writerside docker image version
   DOCKER_VERSION: 232.10275
   # Add the variable below to upload Algolia indexes
   # Replace HI with the ID of the instance in capital letters
-  ALGOLIA_ARTIFACT: algolia-indexes-RESUME.zip
+  ALGOLIA_ARTIFACT: algolia-indexes-BLOG.zip
 
 jobs:
   build:
